--- a/sass/style.scss
+++ b/sass/style.scss
@@ -32,6 +32,10 @@ hr {
   width: 100%;
 }
 
+form {
+  padding: 0 10px;
+}
+
 button {
   clear: both;
   float: left;
